<resources>
    <string name="app_name">MyQuiz</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name.</string>
    <string name="name">Name</string>
    <string name="start">START</string>

    <!-- QuizActivity -->
    <string name="question">What country does this flag belong to?</string>
    <string name="select_an_answer">Please select an answer.</string>

    <!-- ResultActivity -->
    <string name="score">Score</string>
    <string name="total_questions">Total questions:</string>
    <string name="total_right_answers">Right answers:</string>
    <string name="finish">Finish</string>

</resources>