<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".MainActivity"
    android:background="@color/cardview_dark_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:text="@string/app_name"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="@string/welcome"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_name"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:text="@string/start"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>